package com.diguage.didp.prototype;

/**
 * ConcretePrototype2 类
 *
 * @author D瓜哥, https://www.diguage.com/
 * @since 2017-05-19 17:53:35
 */
public class ConcretePrototype2 extends Prototype {
  public Prototype clone() {
    return this;
  }
}
